# svelte-tauri-vite-tw-boilerplate

./: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src/lib/: Greet.svelte
src/store/: store.ts
